# Presenter-Server

./: .travis.yml  README.md  check-code-style.sh
src/: CMakeLists.txt  coverage.sh  daemon_port.h.in
src/keysenderDaemon/: CMakeLists.txt  KeySenderDaemon.cpp  KeySenderDaemon.h  KeySenderDaemonMain.cpp
src/main/: CMakeLists.txt  Main.cpp  Version.h.in
src/main/connector/: BluetoothConnectorBase.cpp  BluetoothConnectorBase.h  BluetoothConnector_Linux.cpp  BluetoothConnector_Linux.h  BluetoothConnector_Windows.cpp  BluetoothConnector_Windows.h  CMakeLists.txt  KeySender.cpp  KeySender.h  RemoteControl.cpp  RemoteControl.h  key_sender.c  key_sender.h
src/main/connector/bluetooth/: BluetoothConnector.h  BluetoothConnectorBase.cpp  BluetoothConnectorBase.h  BluetoothConnector_Linux.cpp  BluetoothConnector_Linux.h  BluetoothConnector_Windows.cpp  BluetoothConnector_Windows.h  CMakeLists.txt
src/main/gui/: AboutWindow.cpp  AboutWindow.h  AboutWindow.ui  CMakeLists.txt  Logger.cpp  Logger.h  Logger.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui
src/main/res/: images.qrc
src/main/res/images/: images_linux.qrc  images_win.qrc
src/main/res/images/msw/: msw.rc
src/main/res/scripts/: coverage.sh  presenter_server.sh
src/test/: CMakeLists.txt
src/test/gui/: AboutWindowTest.cpp  AboutWindowTest.h  CMakeLists.txt  MainWindowTest.cpp  MainWindowTest.h
